--- a/html-basic/media.html
+++ b/html-basic/media.html
@@ -19,7 +19,7 @@
     <br>
     <picture>
         <source media=(min-width:800px) srcset="https://images.unsplash.com/photo-1625149969628-85ca77e7c949?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80">
-        <img src="python.jpg" alt="python logo">
+        <img src="python.jpg" alt="python logo" title="python logo">
     </picture>
 </body>
 </html>
