--- a/html-basic/form.html
+++ b/html-basic/form.html
@@ -19,6 +19,7 @@
                 <input type="password" name="password" id="password" placeholder="Password">
             </label>
         </p>
+        <button type="submit">Log in</button>
     </form>
 </body>
 </html>
