--- a/html-basic/form.html
+++ b/html-basic/form.html
@@ -39,7 +39,7 @@
                 <input type="email" name="email" id="email" placeholder="email adress" required>
             </p>
             <p>
-                <label for="age">Enter your age: </label>
+                <label for="age">Enter age: </label>
                 <input type="number" name="age" id="age" min="18" placeholder="age" required>
             </p>
             <p>
