--- a/css/selectors.html
+++ b/css/selectors.html
@@ -38,7 +38,7 @@
             background: url('https://cdn.pixabay.com/photo/2018/12/01/09/53/network-3849202_1280.jpg') no-repeat center ;
             background-size: cover;
         }
-        
+
         main {
             width: 70%;
             margin-left: auto;
@@ -81,9 +81,9 @@
             <h1>My holidays</h1>
             <p>Lorem ipsum dolor sit amet.</p> 
             <ol>
-                <li class="item">Isnalds</li>
-                <li class="item">Moutains</li>
-                <li class="item">Forests</li>
+                <li class="item">Islands</li>
+                <li class="item">Mountains</li>
+                <li class="item">Trees</li>
                 <li class="item">Lakes</li>
             </ol>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam at doloremque ipsa assumenda itaque sequi veniam ab exercitationem ducimus est obcaecati sint dolore voluptate tenetur in, nostrum reiciendis ex impedit, vitae quas veritatis. Voluptatibus quisquam quasi provident perspiciatis veniam ullam nobis reiciendis alias quidem accusantium odit impedit doloremque rerum perferendis neque corporis, deserunt, voluptas debitis fugit eligendi nesciunt amet. Facilis qui ea, possimus expedita veritatis id alias, eaque ipsa est ex numquam odit quisquam et cupiditate magni laudantium perspiciatis, adipisci praesentium iste quasi quos ad tenetur. Nihil earum ex ea pariatur voluptatem, minus consectetur, distinctio dignissimos soluta, fugiat quia aspernatur!</p>
